--- a/assets/css/style_antoine.css
+++ b/assets/css/style_antoine.css
@@ -1,12 +1,54 @@
-.div_white{
-    background-color: white;
+.container my-5 py-2{
+    margin: 0%
 }
-.div_first{
-    background-color: white;
+.text-center font-weight-bold my-5{
+    margin: 0%
 }
-.div_second{
-    background-color: white;
+.row{
+    margin: 0%
 }
-.div_third{
-    background-color: #00FFAD;
+.col-md-4 text-center aos-init aos-animate{
+    margin: 0%
+}
+.mx-auto{
+    margin: 0%
+}
+.jumbotron jumbotron-fluid feature{
+    margin: 0%
+}
+.container my-5{
+    margin: 0%
+}
+.row justify-content-between text-center text-md-left{
+    margin: 0%
+}
+.col-md-6 aos-init aos-animate{
+    margin: 0%
+}
+.font-weight-bold{
+    margin: 0%
+}
+.my-4{
+    margin: 0%
+}
+.btn my-4 font-weight-bold atlas-cta cta-blue{
+    margin: 0%
+}
+.col-md-6 align-self-center aos-init aos-animate{
+    margin: 0%
+}
+.mx-auto d-block{
+    margin: 0%
+}
+.jumbotron jumbotron-fluid feature{
+    margin: 0%
+}
+.row justify-content-between text-center text-md-left{
+    margin: 0%
+}
+.col-md-6 flex-md-last aos-init aos-animate{
+    margin: 0%
+}
+.col-md-6 align-self-center flex-md-first aos-init aos-animate{
+margin: 0%;
 }
