--- a/stylx.css
+++ b/stylx.css
@@ -137,15 +137,12 @@
 @media (min-width: 771px) and (max-width: 900px) {
   .fitou{
     width: 100%;
-  }
-  .allico{
-    margin-right: 200px;
-    
-  }
+  }  
   .blabla{
-    margin-left: 50%;
+  margin-right: 30%;
+  margin-left: 0px;
+  min-width: 250px;
   }
-}
 
 /* Tablette */ 
 @media (min-width: 575px) and (max-width: 770px) {
