Commit kéké finalV3

--- a/stylx.css
+++ b/stylx.css
@@ -72,13 +72,20 @@
     background-color: #00FFAD;
     color:#192440;
     cursor:pointer;
+    
 }
 .btn_free:hover{
     color:white;
     background-color:#192440;
+    transition-property: color, background;
+    transition-duration: 0.6s;
 }
 .btn_frea:hover{
     color:white;
+   
+
+    transition-property: color;
+    transition-duration: 1s;
 }
 .bannerfun{
     display:flex;
@@ -125,6 +132,8 @@
 .ico:hover{
     background-color: #00FFAD;
     color:white;
+    transition-property: background;
+    transition-duration: 1s;
 }
 
 .picbanner{
