--- a/assets/css/style_antoine.css
+++ b/assets/css/style_antoine.css
@@ -1,54 +1,198 @@
-.container my-5 py-2{
-    margin: 0%
+.body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #292b2c;
+  background-color: #fff;
 }
-.text-center font-weight-bold my-5{
-    margin: 0%
+.white_widow{
+  display: flex;
+  flex-direction: row;
+justify-content: center;
+  height: 35vh;
+  
 }
-.row{
-    margin: 0%
+.lemon_haze{
+  display: flex;
+flex-direction: column;
+align-items: center;
+width: 33%;
+height: 80%;
+} 
+.belladonna{
+  font-size: 1.5rem;
+   margin-top: 0;
+  margin-bottom: 0.5rem;
 }
-.col-md-4 text-center aos-init aos-animate{
-    margin: 0%
+.amnesia_haze{
+  
+  width: 90%;
+  display: flex;
+ 
+  margin-top: 0;
+  margin-bottom: 1rem;
+}/*
+.auto_jack{
+Height: 30%;
+width : 30%;
+}*/
+.acapulco_gold{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 50vh;
+  width: 100vw;
 }
-.mx-auto{
-    margin: 0%
+.orange_bud{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.jumbotron jumbotron-fluid feature{
-    margin: 0%
+.alien_kush{
+  display: flex;
+  flex-direction: row;
+  height: 50vh;
+  width: 100vw;
+  margin: 0% 0%;
 }
-.container my-5{
-    margin: 0%
+.try{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0%;
+} 
+#feature-first {
+  background: linear-gradient(168deg, #ffffff 55%, #00ffad 0);
 }
-.row justify-content-between text-center text-md-left{
-    margin: 0%
+#feature-last {
+  background: #00ffad;
 }
-.col-md-6 aos-init aos-animate{
-    margin: 0%
+.container1 {
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
 }
-.font-weight-bold{
-    margin: 0%
+.text-center {
+  text-align: center !important;
 }
-.my-4{
-    margin: 0%
+.font-weight-bold {
+  font-weight: 700;
 }
-.btn my-4 font-weight-bold atlas-cta cta-blue{
-    margin: 0%
+.my-5 {
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
 }
-.col-md-6 align-self-center aos-init aos-animate{
-    margin: 0%
+.py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
+}/*
+.col-md-4 {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 33.333333%;
+  -ms-flex: 0 0 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
+}*/
+.jumbotron {
+  padding: 2rem 1rem;
+  margin-bottom: 2rem;
+  background-color: #eceeef;
+  border-radius: 0.3rem;
 }
-.mx-auto d-block{
-    margin: 0%
+.jumbotron-fluid {
+  padding-right: 0;
+  padding-left: 0;
+  border-radius: 0;
 }
-.jumbotron jumbotron-fluid feature{
-    margin: 0%
+.justify-content-between {
+  -webkit-box-pack: justify !important;
+  -webkit-justify-content: space-between !important;
+  -ms-flex-pack: justify !important;
+  justify-content: space-between !important;
 }
-.row justify-content-between text-center text-md-left{
-    margin: 0%
+.col-md-6 {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 50%;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
 }
-.col-md-6 flex-md-last aos-init aos-animate{
-    margin: 0%
+.my-4 {
+  margin-top: 1.5rem !important;
+  margin-bottom: 1.5rem !important;
 }
-.col-md-6 align-self-center flex-md-first aos-init aos-animate{
-margin: 0%;
+.btn1 {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.25;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
+.btn1:focus,
+.btn1:hover {
+  text-decoration: none;
+}
+.btn1.focus,
+.btn1:focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
+  box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25);
+}
+.btn1.disabled,
+.btn1:disabled {
+  cursor: not-allowed;
+  opacity: 0.65;
+}
+.btn1.active,
+.btn1:active {
+  background-image: none;
+}
+.align-self-center {
+  -webkit-align-self: center !important;
+  -ms-flex-item-align: center !important;
+  -ms-grid-row-align: center !important;
+  align-self: center !important;
+}
+.mx-auto {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+.d-block {
+  display: block !important;
+}
+.atlas-cta {
+  border-radius: 22px !important;
+  padding: 12px 30px !important;
+  font-weight: 700;
+  transition: 0.3s ease-in-out !important;
+}
+.atlas-cta:hover {
+  text-decoration: none;
+  transform: translateY(-5px);
+}
+.cta-blue {
+  background: #192440;
+  color: #fff;
+}
+.cta-blue:hover {
+  color: #fff;
+  background: #121a2e;
+}
+
